# compgraph

hw1_1/: task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py  task11.py  task12.py  task13.py  task14.py  utils.py
hw1_2/: Tetrahedron.py  task01.py  task02.py  task03.py  task04.py  task05.py  task06.py  task07.py  task08.py  task09.py  task10.py  task11.py  task12.py  task13.py  task15.py  utils.py
hw1_3/: task01.py  task02.py  task05.py  task07.py
hw1_4/: task00.py  task01.py  task02.py  task03.py  task04.py  task05.py  utils.py
proj/: CMakeLists.txt
proj/src/: cube.cpp  main.cpp  task3_2.cpp  task4.cpp
proj/src/res/shaders/: animated_rect.vert  cube.frag  cube.vert  outline.frag  triangle.frag  triangle.vert
proj/src/utils/: shader_utils.cpp  shader_utils.h  texture.cpp  texture.h
